--- a/tem/src/main/resources/templates/users.html
+++ b/tem/src/main/resources/templates/users.html
@@ -3,11 +3,13 @@
 <link rel="stylesheet" href="style.css">
 <head>
 	<meta charset="ISO-8859-1">
-	<title>List Users</title>
-	<link rel="stylesheet" href="css/style.css" th:href="@{/css/style.css}">
+	<title>Lista utenti</title>
+	<link rel="stylesheet" href="css/style2.css" th:href="@{/css/style2.css}">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
 <nav th:replace="/header :: header"><p>Prova</p></nav>
+
 <div class="container text-center">
 	<div>
 		<form th:action="@{/logout}" method="post">
