--- a/tem/src/main/resources/templates/register_success.html
+++ b/tem/src/main/resources/templates/register_success.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" href="style.css">
-<head>
-    <meta charset="ISO-8859-1">
-    <title>Registration Success</title>
+<html lang="en"><head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
     <link rel="stylesheet" href="css/style.css" th:href="@{/css/style.css}">
-</head>
-<body>
-	<nav th:replace="/header :: header"><p>Prova</p></nav>
-    <div class="container text-center">
-        <h3>Hai effettuato la registrazione con successo!</h3>
-        <h4><a href="/login">Clicca qui per effettuare il Login</a></h4>
-    </div>
-     
-</body>
-</html>
+    <title>Login</title>
+
+  </head>
+  <body>
+<div class="parent">	
+	<div class="sfondo">
+	<img src="img/sfondo.jpg" th:src="@{/img/sfondo.jpg}" alt="sfondo"></img>
+	
+	<div class="introduzione">
+     <div class="container2">
+      <form class="form-signin" method="post" action="/login">
+      <h2 style="font-family:Segoe UI Light; font-size:20px; color:white; text-shadow: 3px 3px 8px #006680; text-align:center;">La registrazione è avvenuta con successo, effettua il login!</h2>
+        <h1 style="font-family:Segoe UI Light; font-size:26px; color:#f4511e; text-shadow: 3px 3px 8px #aa2e08;">Accesso</h1>
+        <p>
+          <label for="username">Username</label>
+          <input type="text" id="username" name="email" class="form-control" placeholder="Username" required="" autofocus="">
+        </p>
+        <p>
+          <label for="password" >Password</label>
+          <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
+        </p>
+        <input name="_csrf" type="hidden" value="5f4b0257-f1a2-4984-9752-19610cd7dd83">
+        <button class="button4" type="submit">Accedi</button>
+      </form>
+</div>
+</div>
+	<a href="/" ><img class="logo" id="logo" src="img/logo2.png" th:src="@{/img/logo2.png}" alt="logo" style="width:265px;height:44px;"></img></a>
+	</div>
+	<nav th:replace="/footer :: footer"><p>Prova</p></nav>
+	</div>
+</body></html>
