--- a/tem/src/main/resources/templates/login-required.html
+++ b/tem/src/main/resources/templates/login-required.html
@@ -16,7 +16,7 @@
 	<div class="introduzione">
      <div class="container2">
       <form class="form-signin" method="post" action="/login">
-     <h2> &Egrave; necessario effettuare il login per accedere a questa pagina.</h2>
+     <h2 style="color:white;"> &Egrave; necessario effettuare il login per accedere a questa pagina.</h2>
         <h1 style="font-family:Segoe UI Light; font-size:26px; color:#f4511e; text-shadow: 3px 3px 8px #aa2e08;">Accesso</h1>
         <p>
           <label for="username">Email</label>
