--- a/tem/src/main/resources/templates/edit-linea.html
+++ b/tem/src/main/resources/templates/edit-linea.html
@@ -20,17 +20,17 @@
                     <form action="#" th:action="@{/risorse/update/linea/{id}(id=${linea.id})}" th:object="${linea}" method="post">
                         <div class="row">
                             <div class="form-group col-md-6">
-                                <label for="nome" class="col-form-label">Nome</label> <input type="text" th:field="${linea.nome}" class="form-control" id="nome" placeholder="Nome"> <span th:if="${#fields.hasErrors('nome')}" th:errors="nome" class="text-danger"></span>
+                                <label for="nome" class="col-form-label">Nome</label> <input type="text" th:field="${linea.nome}" class="form-control" id="nome" placeholder="Nome" required minlength="2" maxlength="50"> <span th:if="${#fields.hasErrors('nome')}" th:errors="nome" class="text-danger"></span>
                             </div>
                             <div class="form-group col-md-8">
-                                <label for="partenza" class="col-form-label">Partenza</label> <input type="text" th:field="${linea.partenza}" class="form-control" id="partenza" placeholder="Partenza"> <span th:if="${#fields.hasErrors('partenza')}" th:errors="partenza" class="text-danger"></span>
+                                <label for="partenza" class="col-form-label">Partenza</label> <input type="text" th:field="${linea.partenza}" class="form-control" id="partenza" placeholder="Partenza" required minlength="2" maxlength="50"> <span th:if="${#fields.hasErrors('partenza')}" th:errors="partenza" class="text-danger"></span>
                             </div>
                             <div class="form-group col-md-8">
-                            <label for="destinazione" class="col-form-label">Destinazione</label> <input type="text" th:field="${linea.destinazione}" class="form-control" id="destinazione" placeholder="Destinazione"> <span th:if="${#fields.hasErrors('destinazione')}" th:errors="destinazione" class="text-danger"></span>
+                            <label for="destinazione" class="col-form-label">Destinazione</label> <input type="text" th:field="${linea.destinazione}" class="form-control" id="destinazione" placeholder="Destinazione" required minlength="2" maxlength="50"> <span th:if="${#fields.hasErrors('destinazione')}" th:errors="destinazione" class="text-danger"></span>
                             </div>
 
                             <div class="form-group col-md-8">
-                                <input type="submit" class="btn btn-primary" value="Inserisci Linea">
+                                <input type="submit" class="btn btn-primary" value="Modifica Linea">
                             </div>
                         </div>
                     </form>
