Check style + typo

--- a/tem/src/main/resources/templates/insert-daticorsa.html
+++ b/tem/src/main/resources/templates/insert-daticorsa.html
@@ -70,7 +70,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 			<div>
 			
 				<div>
-					<input type="text" th:field='${datiCorsa.lineaCorsa}' style="  border-bottom: 1px solid #ff6600;" required placeholder="Lined della corsa" onclick="this.value=''"/>
+					<input type="text" th:field='${datiCorsa.lineaCorsa}' style="  border-bottom: 1px solid #ff6600;" required placeholder="Linea della corsa" onclick="this.value=''"/>
 				</div>
 			</div>
 			
