--- a/tem/src/main/resources/templates/insert-daticorsa.html
+++ b/tem/src/main/resources/templates/insert-daticorsa.html
@@ -104,7 +104,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 			
 			<div >
 				<label for="traffico-select">Traffico</label><select id="traffico-select" th:field="${datiCorsa.traffico}">
-				    <option th:value="'true'" th:text="Si"></option>
+				    <option th:value="'true'" th:text="Sì"></option>
 				    <option th:value="'false'" th:text="No"></option>
 				</select>
 			</div>
